@@ -55,6 +55,7 @@ import org.apache.solr.core.RequestParams;
 import org.apache.solr.core.SolrCore;
 import org.apache.solr.handler.component.HighlightComponent;
 import org.apache.solr.handler.component.ResponseBuilder;
+import org.apache.solr.handler.component.ShardDoc;
 import org.apache.solr.handler.component.ShardRequest;
 import org.apache.solr.highlight.SolrHighlighter;
 import org.apache.solr.parser.QueryParser;
@@ -765,6 +766,25 @@ public class SolrPluginUtils {
       }
     }
     return dest;
+  }
+
+  /** Copies the given {@code namedList} assumed to have doc uniqueKey keyed data into {@code destArr}
+   * at the position of the document in the response.  destArr is assumed to be the same size as
+   * {@code resultIds} is.  {@code resultIds} comes from {@link ResponseBuilder#resultIds}.  If the doc key
+   * isn't in {@code resultIds} then it is ignored.
+   * Note: most likely you will call {@link #removeNulls(Map.Entry[], NamedList)} sometime after calling this. */
+  public static void copyNamedListIntoArrayByDocPosInResponse(NamedList namedList, Map<Object, ShardDoc> resultIds,
+                                                              Map.Entry<String, Object>[] destArr) {
+    assert resultIds.size() == destArr.length;
+    for (int i = 0; i < namedList.size(); i++) {
+      String id = namedList.getName(i);
+      // TODO: lookup won't work for non-string ids... String vs Float
+      ShardDoc sdoc = resultIds.get(id);
+      if (sdoc != null) { // maybe null when rb.onePassDistributedQuery
+        int idx = sdoc.positionInResponse;
+        destArr[idx] = new NamedList.NamedListEntry<>(id, namedList.getVal(i));
+      }
+    }
   }
 
   /**
